2018-02-21 20:47:00 Alessandro De Salvo
	* Remove HEP OSLibs dependenciess

2018-02-21 19:42:00 Alessandro De Salvo
	* Improved timestamp mechanism

2018-02-21 14:18:00 Alessandro De Salvo
	* Refactoring the images to build from the minimal sources

2018-02-20 17:25:00 Alessandro De Salvo
	* Add new base minimal images

2018-02-15 11:25:00 Alessandro De Salvo
	* Fixed new HEP OS Libs

2018-02-09 16:48:00 Alessandro De Salvo
	* Updated HEP OS Libs