@@ -1,3 +1,6 @@
+2018-02-22 09:00:00 Alessandro De Salvo
+	* New maintaine label style
+
 2018-02-21 20:47:00 Alessandro De Salvo
 	* Remove HEP OSLibs dependenciess
 
